--- a/package.json
+++ b/package.json
@@ -3,21 +3,6 @@
   "version": "0.0.0",
   "main": "server/index.js",
   "dependencies": {
-    "compression": "^1.7.1",
-    "core-js": "^2.5.0",
-    "express": "^4.13.3",
-    "express-static-gzip": "~0.3.2",
-    "morgan": "^1.9.0",
-    "body-parser": "^1.13.3",
-    "method-override": "^2.3.10",
-    "cookie-parser": "^1.3.5",
-    "express-session": "^1.11.3",
-    "errorhandler": "^1.4.2",
-    "composable-middleware": "^0.3.0",
-    "fast-json-patch": "^2.0.5",
-    "lodash": "^4.17.10",
-    "lodash-es": "^4.17.10",
-    "lusca": "^1.4.1",
     "babel-core": "^6.18.2",
     "babel-plugin-angular2-annotations": "^5.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -28,18 +13,29 @@
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.18.0",
-    "ejs": "^2.5.3",
-    "mongoose": "^5.1.5",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.3.3",
+    "body-parser": "^1.13.3",
+    "composable-middleware": "^0.3.0",
+    "compression": "^1.7.1",
     "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.3.5",
+    "core-js": "^2.5.0",
+    "ejs": "^2.5.3",
+    "errorhandler": "^1.4.2",
+    "express": "^4.13.3",
+    "express-session": "^1.11.3",
+    "express-static-gzip": "~0.3.2",
+    "fast-json-patch": "^2.0.5",
+    "lodash": "^4.17.11",
+    "lodash-es": "^4.17.10",
+    "lusca": "^1.4.1",
+    "method-override": "^2.3.10",
+    "mongoose": "^5.1.5",
+    "morgan": "^1.9.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
-    
-    "@angularclass/hmr-loader": "^3.0.4",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.12",
     "@angular/common": "^6.0.4",
     "@angular/compiler": "^6.0.4",
     "@angular/core": "^6.0.4",
@@ -47,40 +43,42 @@
     "@angular/platform-browser": "^6.0.4",
     "@angular/platform-browser-dynamic": "^6.0.4",
     "@angular/router": "^6.0.4",
-    
     "@angularclass/hmr": "^2.1.3",
+    "@angularclass/hmr-loader": "^3.0.4",
+    "@auth0/angular-jwt": "^2.0.0",
     "@types/core-js": "^2.5.0",
     "@types/jasmine": "^2.5.47",
     "@types/lodash": "^4.14.63",
     "@types/node": "^8.0.26",
     "@types/selenium-webdriver": "^3.0.3",
     "@types/webpack": "^3.0.10",
-    "@auth0/angular-jwt": "^2.0.0",
-    
-    "bootstrap": "~3.3.7",
-    
-    "ngx-bootstrap": "^3.0.0",
-    
-    "bootstrap-sass": "~3.3.7",
-    
-    "font-awesome": ">=4.1.0",
-    
     "autoprefixer": "^8.6.0",
+    "awesome-typescript-loader": "^5.0.0",
     "babel-eslint": "^8.2.3",
-    "babel-register": "^6.16.0",
-    "bs-fullscreen-message": "^1.0.0",
-
-    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "bootstrap": "~3.3.7",
+    "bootstrap-sass": "~3.3.7",
+    "bs-fullscreen-message": "^1.0.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-things": "^0.2.0",
+    "compression-webpack-plugin": "^1.1.11",
     "cors": "^2.8.4",
     "cross-env": "^5.1.1",
-    "eslint": "^5.2.0",
+    "css-loader": "^0.28.7",
     "del": "^3.0.0",
+    "eslint": "^5.2.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "^0.11.2",
+    "font-awesome": ">=4.1.0",
+    "grunt": "^1.0.1",
+    "grunt-build-control": "^0.7.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
-    "gulp-typescript": "~3.2.2",
-    "gulp-tslint": "^8.0.0",
     "gulp-env": "^0.4.0",
     "gulp-eslint": "^5.0.0",
     "gulp-imagemin": "^4.1.0",
@@ -89,78 +87,67 @@
     "gulp-istanbul-enforcer": "^1.0.3",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-mocha": "^6.0.0",
-    
     "gulp-plumber": "^1.0.1",
     "gulp-protractor": "^4.1.0",
     "gulp-rev": "^8.0.0",
     "gulp-rev-replace": "^0.4.2",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-stylint": "^4.0.0",
+    "gulp-tslint": "^8.0.0",
+    "gulp-typescript": "~3.2.2",
     "gulp-util": "^3.0.5",
     "gulp-watch": "^4.3.5",
-    "gulp-stylint": "^4.0.0",
-    "grunt": "^1.0.1",
-    "grunt-build-control": "^0.7.0",
+    "html-webpack-harddisk-plugin": "~0.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "imports-loader": "^0.7.1",
     "isparta": "^4.1.0",
-    "nodemon": "^1.18.1",
-    "run-sequence": "^2.1.0",
+    "istanbul": "1.1.0-alpha.1",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine-core": "^2.3.4",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^2.0.4",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "~1.0.0",
+    "karma-script-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "~0.3.7",
+    "karma-spec-reporter": "~0.0.20",
+    "karma-webpack": "4.0.0-beta.0",
     "lazypipe": "^1.0.1",
-    
-    "compression-webpack-plugin": "^1.1.11",
+    "mini-css-extract-plugin": "~0.4.0",
+    "mocha": "^5.2.0",
+    "ngx-bootstrap": "^3.0.0",
+    "node-sass": "^4.9.2",
+    "nodemon": "^1.18.1",
+    "null-loader": "^0.1.1",
+    "opn": "^5.3.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.2",
+    "phantomjs-prebuilt": "^2.1.4",
+    "postcss-loader": "^2.0.6",
+    "protractor": "^5.3.0",
+    "proxyquire": "^2.0.1",
+    "raw-loader": "^0.5.1",
+    "reflect-metadata": "^0.1.3",
+    "run-sequence": "^2.1.0",
+    "rxjs": "^6.0.0",
+    "sass-loader": "^7.0.3",
+    "sinon": "^6.1.4",
+    "sinon-chai": "^3.2.0",
+    "strip-ansi": "^4.0.0",
+    "style-loader": "^0.18.2",
+    "supertest": "^3.0.0",
+    "through2": "^2.0.1",
+    "to-string-loader": "^1.1.5",
+    "tslint": "^5.7.0",
+    "typescript": "~2.9.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-harddisk-plugin": "~0.2.0",
-    "mini-css-extract-plugin": "~0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.2",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-
-    "typescript": "~2.9.0",
-    "awesome-typescript-loader": "^5.0.0",
-    "babel-loader": "^7.1.2",
-    "css-loader": "^0.28.7",
-    "file-loader": "^0.11.2",
-    "imports-loader": "^0.7.1",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "null-loader": "^0.1.1",
-    "postcss-loader": "^2.0.6",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.18.2",
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.0.3",
-
-
-    "karma-webpack": "4.0.0-beta.0",
-    "to-string-loader": "^1.1.5",
-    
-    "through2": "^2.0.1",
-    "opn": "^5.3.0",
-    "protractor": "^5.3.0",
-    "istanbul": "1.1.0-alpha.1",
-    "chai": "^4.1.2",
-    "sinon": "^6.1.4",
-    "chai-as-promised": "^7.1.1",
-    "chai-things": "^0.2.0",
-    "karma": "^2.0.4",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-script-launcher": "^1.0.0",
-    "karma-coverage": "^1.0.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-phantomjs-launcher": "~1.0.0",
-    "karma-spec-reporter": "~0.0.20",
-    "karma-sourcemap-loader": "~0.3.7",
-    "sinon-chai": "^3.2.0",
-    "mocha": "^5.2.0",
-    "jasmine-core": "^2.3.4",
-    "karma-jasmine": "^1.0.2",
-    "jasmine-spec-reporter": "^4.2.1",
-    "phantomjs-prebuilt": "^2.1.4",
-    "proxyquire": "^2.0.1",
-    "strip-ansi": "^4.0.0",
-    "supertest": "^3.0.0",
-    "tslint": "^5.7.0"
+    "zone.js": "^0.8.12"
   },
   "engines": {
     "node": ">=6.x.x",
@@ -178,7 +165,6 @@
     "test:server": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --reporter spec --timeout 5000 --require ./mocha.conf.js ./server/**/*.{spec,integration}.js mocha.global.js",
     "test:e2e": "gulp webpack:dev && protractor ./protractor.conf.js",
     "update-webdriver": "node node_modules/protractor/bin/webdriver-manager update",
-
     "start": "node server",
     "start:client": "webpack-dev-server --config webpack.dev.js",
     "start:server": "nodemon --watch server server"
