--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.11.3",
     "express-static-gzip": "~0.3.2",
     "fast-json-patch": "^2.0.5",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.10",
     "lusca": "^1.4.1",
